src/test/deca/syntax/valid/nonprovided/println_true.deca
/*
    Description : test sur literal : TRUE

    Résultat : OK

*/
{
    println(true);
}
